--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name='description' content='Software Engineering Class Project'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ClassWow</title>
-    <link rel="stylesheet" href="../static/style.css" />
+    <link rel="stylesheet" href="static/style.css" />
 </head>
    
 <body onload="loadList()">
@@ -54,7 +54,7 @@
 
  </div>
 
-<script src="../static/script.js"></script>
+<script src="static/script.js"></script>
 
 
 </body>
