--- a/templates/index.html
+++ b/templates/index.html
@@ -39,6 +39,22 @@
     </button>
  </div>
 
+
+ <!-- Change this! This is just here to show how to configure a form to work with the API. -->
+ <!-- This button calls a function which overwrites the form's action. This would allow something like a text input to be used to choose the form's ID. -->
+ <button type="button" onclick="setRouteFormAction()">
+     Set RouteID
+ </button>
+ <form id="route-form" action="" method="post">
+     <!-- This is a Django template tag which is used for security purposes. It is required in every form. -->
+     {% csrf_token %}
+     
+     <!-- This populates the form parameter location_ids with a list of comma-seperated values.
+        In practice, the parameter will probably be generated with JS, unless there's a better way. -->
+     <input type="hidden" name="location_ids" value="america,brazil">
+     <input type="submit" value="Create sample route">
+ </form>
+ 
  <!--
     <form action="">
         <label for="place1">Location 1</label>
