--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
 <body onload="renderList()">
 
     <div id="debug">
-        <h1>Hello! Welcome to the Project</h1>
+        <h1>Hello! Welcome to TourBus!</h1>
 
         <input type="button" value="Login Page" onclick="location.href='{% url 'login' %}'" />
 
