Added admin functionality

--- a/static/style.css
+++ b/static/style.css
@@ -18,4 +18,8 @@ body {
 
 }
 
+.welcome-title {
+  text-align: center;
+}
+
 /* Will try not to touch div elements due to ARIA Live being a thing */
