--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1>Welcome!</h1>
+        <h1 class="welcome-title">Welcome!</h1>
 
         <input type="button" value="User Login" onclick="location.href='{% url 'login' %}'" />
         <input type="button" value="Don't have an account?" onclick="location.href='{% url 'signin' %}'" />
