--- a/templates/main.html
+++ b/templates/main.html
@@ -11,6 +11,19 @@
    
 <body onload="renderList()">
 
+         <!-- as mentioned in views.py, I used chatgtp to get the username to display-->
+    <div id="user-info" style="position:fixed; top:10px; right:10px; font-weight:600;">
+
+        {% if current_username %}
+            {{ current_username }}
+        {% else %}
+        <a href="{% url 'login' %}">Log in</a>
+        {% endif %}
+    </div>
+    <!-- end of chatgpt blob-->
+
+
+
     <div id="debug">
         <h1>Hello! Welcome to TourBus!</h1>
 
