--- a/templates/main.html
+++ b/templates/main.html
@@ -86,6 +86,7 @@
             <div id="place-photo"></div>
             <p id="place-address"></p>
             <p id="place-rating"></p>
+            <p id="place-summary"></p>
             <button id="add-to-list-btn" disabled>Add to List</button>
         </div>
     </div>
