refactored distance.py to take in IDs instead of terminal input, displays optimized route, also added the API key txt

--- a/templates/main.html
+++ b/templates/main.html
@@ -57,6 +57,7 @@
         </div>
         <div id="test"></div>
         <div id="test2"></div>
+        <div id="optimal-route" style="margin-top:8px;"></div>
 
 
          <!-- This button calls a function which overwrites the form's action. This would allow something like a text input to be used to choose the form's ID. -->
