--- a/templates/main.html
+++ b/templates/main.html
@@ -13,11 +13,10 @@
 
          <!-- as mentioned in views.py, I used chatgtp to get the username to display-->
     <div id="user-info" style="position:fixed; top:10px; right:10px; font-weight:600;">
-
         {% if current_username %}
-            {{ current_username }}
+            <a href="{% url 'user_info' %}">{{ current_username }}</a>
         {% else %}
-        <a href="{% url 'login' %}">Log in</a>
+            <a href="{% url 'login' %}">Log in</a>
         {% endif %}
     </div>
     <!-- end of chatgpt blob-->
@@ -40,7 +39,7 @@
         </button>
 
         <div id="test"></div>
-        <div id="test2"></div>
+
         <div id="optimal-route" style="margin-top:8px;"></div>
 
 
