--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
     <div id="debug">
         <h1>Hello! Welcome to TourBus!</h1>
 
-        <input type="button" value="Login Page" onclick="location.href='{% url 'login' %}'" />
+        <input type="button" value="Logout" onclick="location.href='{% url 'login' %}'" />
 
         <button type="button" onclick="newList()">
             Clear
