--- a/static/style.css
+++ b/static/style.css
@@ -48,4 +48,7 @@ body {
     font-size: 0.9em;
 }
 
+.route-id { display:block; margin: 2px 0; }
+#test { white-space: normal; overflow-wrap: anywhere; word-break: break-word; }
+
 /* Will try not to touch div elements due to ARIA Live being a thing */
