--- a/templates/admin_users.html
+++ b/templates/admin_users.html
@@ -6,7 +6,7 @@
   <title>Admin</title>
   <link rel="stylesheet" href="{% static 'style.css' %}">
 </head>
-<body>
+<body class="admin-page">
   <div style="position:fixed; top:10px; right:10px; font-weight:600;">
     {% if current_username %}{{ current_username }}{% endif %}
   </div>
