--- a/static/style.css
+++ b/static/style.css
@@ -36,7 +36,7 @@ body {
 
 }
 
-/* not all names are visible? */
+/* not all names are visible? set overflow to auto explicitly (doesn't it just do it as default though? Idk bro)*/
 .admin-page {
   overflow-y: auto; 
   overflow-x: hidden;
@@ -56,7 +56,10 @@ body {
     font-size: 0.9em;
 }
 
-.route-id { display:block; margin: 2px 0; }
+.route-id { 
+    display:block; 
+    margin: 2px 0;
+ }
 #test { white-space: normal; overflow-wrap: anywhere; word-break: break-word; }
 
 /* Will try not to touch div elements due to ARIA Live being a thing */
